# judge-llm

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  models.json  pyproject.toml  requirements.txt  test_fallback.py
src/config/: models.py
src/services/: client_manager.py  groq.py  huggingface.py  judge.py  llm_client.py  model_validator.py  openrouter.py  responses.py  together_ai.py
src/ui/: main.py
tests/: test_client_manager.py  test_groq.py  test_judge.py  test_llm_client.py  test_responses.py  test_together.py
