[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "judge-llm"
version = "1.0.0"
description = "Compare AI models side-by-side with automatic fallback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.0",
    "streamlit-extras>=0.3.6",
    "together>=1.0.0",
    "groq>=0.12.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
